--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#FF0000">
+    <meta name="theme-color" content="#0e1f2a">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -48,19 +48,18 @@
     </button>
     <nav class="nav">
         <div class="nav__items">
-            <a href="#aboutme" class="nav__item">About Me</a>
-            <a href="#offers" class="nav__item">Offer</a>
+            <a href="#aboutme" class="nav__item">O mnie</a>
+            <a href="#offers" class="nav__item">Oferta</a>
             <a href="https://github.com/paulalast" target="_blank"
-                class="nav__item">Projects</a>
-            <a href="#contact" class="nav__item">Contact</a>
+                class="nav__item">Projekty</a>
+            <a href="#contact" class="nav__item">Kontakt</a>
         </div>
     </nav>
     <header class="header section black-section">
         <h1 class="header__heading">CodeLast </h1>
         <hr>
-        <p class="header__text">Twórca stron internetowych</p>
-        <a href="#aboutme" class="header__btn btn-special-animation">About
-            Me</a>
+        <p class="header__text">Web Developer</p>
+        <a href="#aboutme" class="header__btn btn-special-animation">O mnie</a>
     </header>
     <main>
 
@@ -72,39 +71,39 @@
             </div>
             <div class="about__text animate__animated"
                 data-animation="animate__fadeInRight">
-                <h2 class="about__text-title ">About Me ...</h2>
+                <h2 class="about__text-title ">O mnie ...</h2>
                 <p class="about__text-info">
-                    Hi there! I’m Paulina - a junior <strong>Web
-                        Developer</strong> with a
-                    front-end development focus. I’m passionate about building
-                    stunning, useful websites that are tailored to each client’s
-                    specific requirements. I bring a keen eye for detail and
-                    design to every project I work on because of my background
-                    in photography.
-                    In addition to my expertise in web development, my
-                    experience in social media and advertising has taught me the
-                    value of active listening and a focus on the goals of the
-                    customer. I recognise that every company is different, and I
-                    work hard to develop a customised solution for each of my
-                    clients.
-                    <br> <br>
-                    I am committed to producing top-notch work and going above
-                    and beyond for clients. I design user-friendly, scalable,
-                    mobile-first websites that are designed for success in the
-                    rapidly changing digital market. I’m happy to work with you
-                    to advance your internet presence, whether you run a small
-                    business or a huge organisation.
+                    Cześć! Nazywam się Paulina i jestem junior <strong>Web
+                        Developerem </strong> , specjalizującym się w obszarze
+                    front-endu. Moim celem jest tworzenie ładnych i użytecznych
+                    stron
+                    internetowych, które spełniają oczekiwania każdego klienta.
+                    Z racji mojego zainteresowania fotografią, zwracam uwagę na
+                    detale i estetykę w każdym projekcie. Doświadczenie zdobyte
+                    w social mediach oraz reklamie nauczyło mnie słuchać potrzeb
+                    klientów oraz kierować się ich celami.
                     <br><br>
-                    Together, let’s design a website that will not only be eye
-                    catching but also useful and successful in supporting you in
-                    reaching your goals.
+                    Rozumiem, że każda firma jest inna, dlatego staram się
+                    dostosować podejście do indywidualnych wymagań moich
+                    klientów. Współpracując ze mną, możesz liczyć na
+                    zaangażowanie i chęć rozwijania się. Projektuję strony
+                    internetowe, które są przyjazne dla użytkowników i
+                    zoptymalizowane pod urządzenia mobilne, aby sprostać
+                    wyzwaniom dynamicznego rynku cyfrowego. Chętnie nawiążę
+                    współpracę, niezależnie od wielkości Twojego
+                    przedsiębiorstwa.
+                    <br><br>
+                    Razem możemy stworzyć stronę internetową, która nie tylko
+                    będzie estetyczna, ale również funkcjonalna i wspierająca w
+                    osiąganiu Twoich celów.
+
 
                 </p>
             </div>
         </section>
         <hr class="hr2" id="hr2" data-animation="longAnima">
         <section id="offers" class="offers section">
-            <h2 class="offers__title">Discover My Solutions</h2>
+            <h2 class="offers__title">Oferta</h2>
             <div class="cards">
                 <div class="card animate__animated" id="card1"
                     data-animation="animate__fadeInUp">
@@ -114,52 +113,53 @@
                     </div>
                     <div class="card__content">
                         <h3 class="card__title">Responsive Design</h3>
-                        <p class="card__description">I design websites that
-                            automatically adjust to any screen size, ensuring a
-                            consistent and optimised user experience across
-                            desktops, tablets, and mobile devices. Your website
-                            will load faster, have lower bounce rates, and rank
-                            higher on search engine results pages if you use a
-                            responsive design. Trust me to create a website that
-                            represents your company, engages your audience, and
-                            grows your business.</p>
+                        <p class="card__description">Tworzę strony internetowe,
+                            które automatycznie dostosowują się do różnych
+                            rozmiarów ekranów, zapewniając spójne i
+                            zoptymalizowane wrażenia użytkownika na desktopach,
+                            tabletach i urządzeniach mobilnych. Jeśli
+                            zdecydujesz się na responsywny design, Twoja strona
+                            będzie ładować się szybciej, mieć niższy wskaźnik
+                            odrzuceń oraz wyżej pozycjonować się w wynikach
+                            wyszukiwania na stronach wyszukiwarek.Stwórzmy razem
+                            stronę, która
+                            reprezentuje Twoją firmę, angażuje Twoich odbiorców
+                            i pomaga w rozwoju Twojego biznesu.</p>
                     </div>
                 </div>
-                <div class="card animate__animated animate__delay-1s"
-                    id="card2" data-animation="animate__fadeInUp">
+                <div class="card animate__animated animate__delay-1s" id="card2"
+                    data-animation="animate__fadeInUp">
                     <div class="card__image">
                         <img src="/dist/img/seo.webp" alt="SEO">
                     </div>
                     <div class="card__content">
                         <h3 class="card__title">SEO</h3>
-                        <p class="card__description">Your website's visibility
-                            and organic traffic will increase as a result of my
-                            SEO services. Your website will be optimised by me
-                            to score higher on search engine results pages and
-                            bring in more users. By developing an individual
-                            plan that considers your target audience and
-                            industry, I'll assist you in accomplishing your
-                            online goals and stay one step ahead of the
-                            competition.</p>
+                        <p class="card__description">Tworząc strony, dbam o to,
+                            aby były odpowiednio przygotowane dla wyszukiwarek
+                            internetowych. Współpracując ze mną, możesz być
+                            pewien, że Twoja strona będzie działać sprawnie,
+                            trafiając do właściwej grupy odbiorców poprzez dobrą
+                            pozycję w wynikach wyszukiwania. </p>
                     </div>
                 </div>
-                <div class="card animate__animated animate__delay-2s"
-                    id="card3" data-animation="animate__fadeInUp">
+                <div class="card animate__animated animate__delay-2s" id="card3"
+                    data-animation="animate__fadeInUp">
                     <div class="card__image">
                         <img src="/dist/img/webdesign.webp" alt="Web Design">
                     </div>
                     <div class="card__content">
                         <h3 class="card__title">Creative Web Design
                         </h3>
-                        <p class="card__description">Your website is often the
-                            first introduction potential customers have to your
-                            company. So it's important to make sure it makes a
-                            good impression. I can help you stand out from the
-                            competition and leave a lasting impression with my
-                            innovative web design services. I'll work with you
-                            to realize your idea and design a website that
-                            accurately expresses your business, from unique
-                            layouts to breathtaking imagery.
+                        <p class="card__description">Twoja strona internetowa
+                            jest wirtualną wizytówką Twojej firmy. Warto więc
+                            zadbać o to, by była nie tylko funkcjonalna, lecz
+                            także przyjemna dla oka. Z moją pomocą wyróżnisz
+                            swoją markę na tle konkurencji, pokazując nie tylko
+                            profesjonalizm usług, ale również dbałość o detale
+                            wizualne. Strona firmy zawierająca tylko treść i
+                            szablonowy desgin to za mało. Współczesny odbiorca
+                            poszukuje również ciekawego, estetycznego i spójnego
+                            z treścią i marką designu.
                         </p>
                     </div>
                 </div>
@@ -169,14 +169,13 @@
 
         <section id="contact" class="contact section black-section">
             <h2 class="contact__title">
-                Get in <br> touch!
+                GET IN <br> TOUCH!
             </h2>
             <div class="contact__box">
 
                 <div class="contact__box-info">
                     <p class="address contact__items"><img
-                            src="/dist/img/icons/address.png" alt="">Warsaw
-                        Poland
+                            src="/dist/img/icons/address.png" alt="">Warszawa
                     </p>
                     <a href="tel:+48720834333" class="contact__items"
                         rel="noopener" target="_blank">
@@ -188,50 +187,52 @@
                     </p>
 
 
-                    <div class="contact__box-form">
+                    <form id="contact-form" class="contact__box-form">
                         <div class="form-box">
-                            <label for="username">Name:</label>
+                            <label for="username">Imię:</label>
                             <input type="text" id="username"
-                                placeholder="What is your name?">
+                                placeholder="Jak się nazywasz?">
                             <p class="error-text"></p>
 
                         </div>
                         <div class="form-box">
                             <label for="email">E-mail:</label>
                             <input type="email" id="email"
-                                placeholder="Don't worry, we won't spam you! Enter your email here:">
+                                placeholder="Wpisz swój adres mailowy:">
                             <p class="error-text"></p>
                         </div>
 
                         <div class="form-box">
-                            <label for="text">Message:</label>
+                            <label for="text">Wiadomość:</label>
                             <textarea id="textarea"
-                                placeholder="Share your thoughts with us! What's on your mind?"
-                                cols="20" rows="10"></textarea>
+                                placeholder="W czym mogę Ci pomóc?" cols="20"
+                                rows="10"></textarea>
                             <p class="error-text"></p>
                         </div>
 
 
 
-                        <p class="rodo">Filling out the form signifies that the
-                            personal data provided in it will be processed in
-                            order to receive a response. If your inquiry
-                            pertains to our services, we may present you with an
-                            offer in response. Learn about <a href="#rodo"> how
-                                we process your data.
+                        <p class="rodo">
+                            Wypełnienie formularza oznacza, że podane w nim dane
+                            osobowe będą przetwarzane w celu udzielenia
+                            odpowiedzi. Jeśli Twoje zapytanie dotyczy naszych
+                            usług, w odpowiedzi możemy przedstawić Ci ofertę.
+                            Dowiedz się więcej o tym, <a href="#rodo"> jak
+                                przetwarzamy Twoje dane osobowe.
                             </a></p>
-                        <button class="send btn-special-animation">Send</button>
-                    </div>
+                        <button type="submit"
+                            class="send btn-special-animation">Wyślij</button>
+                    </form>
 
 
 
                 </div>
                 <div class="form__popup">
-                    <p class="form__popup-msg"> Thank you for reaching
-                        out! I will be in touch with you shortly. 🙂
+                    <p class="form__popup-msg"> Twoja wiadomość została wysłana.
+                        Wkrótce się z Tobą skontaktuję! 🙂
                         <br>
                         <button
-                            class="form__popup-close btn-special-animation">Close</button>
+                            class="form__popup-close btn-special-animation">Zamknij</button>
                 </div>
 
             </div>
@@ -253,6 +254,12 @@
         </div>
 
     </footer>
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/regenerator-runtime/0.13.7/runtime.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"></script>
+
     <script async src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 
     <script src="/dist/js/functions.min.js"></script>
