--- a/index.html
+++ b/index.html
@@ -12,16 +12,18 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet"
+    <!-- <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
     <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script> -->
     <!-- <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> -->
+
+    <script src="/node_modules/regenerator-runtime/runtime.js"></script>
 
 
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
@@ -187,24 +189,25 @@
                     </p>
 
 
-                    <form id="contact-form" class="contact__box-form">
+                    <form id="contact-form" class="contact__box-form"
+                        action="contact-form-handler.php" method="post">
                         <div class="form-box">
                             <label for="username">Imię:</label>
-                            <input type="text" id="username"
+                            <input type="text" id="username" name="username"
                                 placeholder="Jak się nazywasz?">
                             <p class="error-text"></p>
 
                         </div>
                         <div class="form-box">
                             <label for="email">E-mail:</label>
-                            <input type="email" id="email"
+                            <input type="email" id="email" name="email"
                                 placeholder="Wpisz swój adres mailowy:">
                             <p class="error-text"></p>
                         </div>
 
                         <div class="form-box">
                             <label for="text">Wiadomość:</label>
-                            <textarea id="textarea"
+                            <textarea id="textarea" name="textarea"
                                 placeholder="W czym mogę Ci pomóc?" cols="20"
                                 rows="10"></textarea>
                             <p class="error-text"></p>
@@ -254,13 +257,14 @@
         </div>
 
     </footer>
-    <script
-        src="https://cdnjs.cloudflare.com/ajax/libs/regenerator-runtime/0.13.7/runtime.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"></script>
 
-    <script async src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/regenerator-runtime/0.13.11/regenerator-runtime.min.js"></script>
+
+    <!-- <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"></script> -->
+
+    <!-- <script async src="https://code.jquery.com/jquery-3.6.4.min.js"></script> -->
 
     <script src="/dist/js/functions.min.js"></script>
     <script src="/dist/js/main.min.js"></script>
